--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "himalaya": "^1.1.0",
+        "pocketbase": "^0.25.0",
         "quagga": "^0.12.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
